# fjord-focus-coach

./: LICENSE  LICENSING.md  README.md  analyzer.py  coach.py  package.json  pyproject.toml  requirements.txt
LICENSES/: COMMERCIAL.txt
src/: index.js
